k8s/certs/templates/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ca-deployment
  labels:
    app.kubernetes.io/name: nginx-ca-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx-ca-deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx-ca-deployment
    spec:
      containers:
        - name: nginx
          image: nginx:1.31.6@sha256:60f0d4e986561e08804f75c211dcaf7fc5455699eada29f42cbe8a0a7253dd86
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: ca-crt
            - mountPath: /etc/nginx
              name: nginx-conf
      volumes:
        - name: ca-crt
          configMap:
            name: anshulg-cert
        - name: nginx-conf
          configMap:
            name: nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ca-service
spec:
  selector:
    app.kubernetes.io/name: nginx-ca-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-ca
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ca.anshulg.com`)
      services:
        - name: nginx-ca-service
          port: 80
  tls:
    secretName: ca-anshulg-com-tls
    domains:
      - main: ca.anshulg.com
